--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <reactor.spring.version>1.0.1.RELEASE</reactor.spring.version>
+        <lombok.version>1.18.10</lombok.version>
+        <springfox.version>2.9.2</springfox.version>
     </properties>
 
     <parent>
@@ -53,13 +56,13 @@
         <dependency>
             <groupId>org.projectreactor</groupId>
             <artifactId>reactor-spring</artifactId>
-            <version>1.0.1.RELEASE</version>
+            <version>${reactor.spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.10</version>
+            <version>${lombok.version}</version>
         </dependency>
 
         <dependency>
@@ -70,12 +73,12 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
+            <version>${springfox.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.9.2</version>
+            <version>${springfox.version}</version>
         </dependency>
 
         <!--  test dependencies -->
